[package]
name = "treris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.25"
lazy_static = "1.4.0"
enum-map = "2.4.2"
strum = { version = "0.24.1", features = ["derive"] }
hashbrown = "0.13.2"
